fix center alignment on awards page

--- a/app/awards/styles.module.css
+++ b/app/awards/styles.module.css
@@ -55,7 +55,7 @@
     border-right-width: 1rem;
     border-right-style: solid;
     border-right-color: gainsboro;
-    margin-right: -0.475rem;
+    margin-right: -0.5rem;
   }
 }
 
